# File-Extension-Conversion

./: .env.template  .gitignore  Dockerfile  README.md  converter_10-9-23.log.test1-results  credits.txt  encoding_handling.py  extensions.py  html_processing.py  jpeg_processing.py  main.py  ner_extraction.py  parallel_processing.py  pdf_processing.py  pyproject.toml  readme.md  requirements.txt  test.py  tests.py  text_summarization.py  todo.txt  tokenization_normalization.py  txt_processing.py  utility.py
.github/: dependabot.yml
.github/workflows/: black.yml  codeql.yml
converters/: async_text_converter.py  converter.py  image_converter.py  requirements.txt  text_converter.py
models/: model_loader.py  text_classifier.py
processors/: text_processor.py
sample_documents/: example.txt  test.html  test.odt
src/: image_collector.py  image_converter.py  text_converter.py
src/formaverter/: __init__.py  gif_splitter.py  image_collector.py  image_converter.py
tests/: test_image_collector.py  test_image_converter.py  test_main.py  test_text_converter.py
utils/: download_utils.py  logging_utils.py  path_utils.py
