[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "MEC-Hooker"
version = "0.1.0"
description = "Your project description"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.3.3"
pypandoc = "^1.6.4"
img2pdf = "^0.4.1"
pdf2image = "^1.16.0"
requests = "^2.26.0"
spacy = "^3.1.3"
asyncio = "^3.4.3"
pdfminer.six = "^20201018"
python-dotenv = "^0.19.1"


[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
