[tool.poetry]
name = "image-type-converter"
version = "0.3.0"
description = "Converts images from one format to another using Pillow."
authors = ["Daethyra <109057945+Daethyra@users.noreply.github.com>"]
license = "GNU Aferro GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
