[tool.pdm]
distribution = true
package-dir = "src"

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
name = "Formaverter"
version = "2.0.0"
description = "Converts images from one format to another using Pillow. Currently supports JPG, PNG, BMP, and WebP."
authors = [
    {name = "Daethyra", email = "109057945+Daethyra@users.noreply.github.com"},
]
dependencies = [
    "pillow<12.0.0,>=11.0.0",
]
requires-python = "<4.0,>=3.13"
readme = "README.md"
license = {text = "GNU Aferro GPL"}
